# badder-seeds

./: .editorconfig  .gitignore  .mypy.ini  .prettierrc  DATA.md  README.md  config.json  environment.yml  gen_pip_conda_files.sh  pyproject.toml  requirements.txt  seed_set_pairings.csv
.github/workflows/: autoformat.yml
badseeds/: __init__.py  bootstrap_sampling.py  dataloader.py  fig_1.py  fig_3.py  fig_4.py  fig_5.py  gensim_train.py  metrics.py  models.py  preprocess.py  replicate_bolukbasi.py  replicate_fig2.py  replicate_fig4.py  replicate_t4f5.py  replicate_table2.py  replicate_table4.py  seedbank.py  tab_4.py  tab_a2.py  temp_preproc.py  utils.py  word2vec_loaders.py
notebooks/: README.md  data_analysis.ipynb  download_data.ipynb  fig_1.ipynb  fig_2.ipynb  fig_3.ipynb  fig_4.ipynb  fig_5.ipynb  fig_a.1.ipynb  pairing.ipynb  preprocess_data.ipynb  preprocessing.ipynb  readme.md  results.ipynb  tab_2.ipynb  tab_4.ipynb  tab_a.1.ipynb  tab_a.2.ipynb  train_models.ipynb
report/: main.tex  neurips_2022.sty
