[tool.poetry]
name = "badseeds-repro"
version = "0.1.0"
description = "Reproducing of _Bad Seeds: Evaluating Lexical Methods for Bias Measurements_"
authors = [
  "Jille van der Togt <jille.vandertogt@student.uva.nl>",
  "Giulio Starace <giulio.starace@student.uva.nl>",
  "Lea Tiyavorabun <lea.tiyavorabun@student.uva.nl>",
  "Matteo Rosati <matteo.rosati@student.uva.nl",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.0"
matplotlib = "^3.5.1"
jupyterlab = "^3.2.7"
torch = "^1.10.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
