[tool.poetry]
name = "badseeds-repro"
version = "0.1.0"
description = "Reproducing of _Bad Seeds: Evaluating Lexical Methods for Bias Measurements_"
authors = [
  "Jille van der Togt <jille.vandertogt@student.uva.nl>",
  "Giulio Starace <giulio.starace@student.uva.nl>",
  "Lea Tiyavorabun <lea.tiyavorabun@student.uva.nl>",
  "Matteo Rosati <matteo.rosati@student.uva.nl",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.0"
matplotlib = "^3.5.1"
jupyterlab = "^3.2.7"
torch = "^1.10.1"
pandas = "^1.3.5"
scikit-learn = "^1.0.2"
gensim = "^4.1.2"
torchtext = "^0.11.1"
gdown = "^4.2.0"
nltk = "^3.6.7"
spacy = "^3.2.1"

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0-py3-none-any.whl"

[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "^21.12b0"}
flake8 = "^4.0.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
